--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
-baseurl = "http://blog.negimic.com/"
+BaseURL = "http://blog.negimic.com/"
 languageCode = "ja-jp"
 title = "negimic blog"
 theme = "casper"
-copyright = "2015 negimic All Rights Reserved"
+copyright = "2016 negimic All Rights Reserved"
 # disqusShortname = "negimic"
 
 [params]
