--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ disqusShortname = "negimic"
 [params]
 author = "negimic"
 description = "ねぎみくのブログ |ω・)"
-bio = "渋谷で働くフロントエンドエンジニア。４年目突入。"
+bio = "渋谷で働くフロントエンドエンジニア。5年目。"
 googleAnalyticsUserID = "UA-60588073-1"
 cover = "/images/header/3.jpg"
 
